--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Voting OSIS YPUI Parung</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <!-- Halaman Login -->
@@ -12,7 +12,7 @@
         <div class="login-container">
             <div class="login-box">
                 <div class="logo">
-                    <img src="logo.png" alt="Logo YPUI" class="logo-image">
+                    <img src="assets/logo.png" alt="Logo YPUI" class="logo-image">
                     <h1>E-Voting OSIS</h1>
                     <p>YPUI Parung</p>
                 </div>
@@ -125,6 +125,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
